sticky add to cart button layout issue

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -323,7 +323,7 @@ a.product__text {
 
 .sticky-atc__controls {
   display: grid;
-  grid-template-columns: minmax(16rem, 1fr) 12rem minmax(17rem, 22rem);
+  grid-template-columns: auto auto auto;
   gap: 1rem;
   align-items: center;
 }
